--- a/client/src/components/css/landing.css
+++ b/client/src/components/css/landing.css
@@ -20,7 +20,7 @@
 .text{
     margin: 80px;    
     color: rgb(232, 255, 28);    
-    text-shadow: 5px 5px 10px rgb(81, 122, 81);
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.788);
    
     -webkit-transform: rotate(-8deg); 
     -moz-transform: rotate(-8deg);
