--- a/client/src/components/css/recipeCreate.css
+++ b/client/src/components/css/recipeCreate.css
@@ -5,7 +5,7 @@
 
 .allF {
     width:  100%;
-    height: 800px;
+    height: 880px;
 
     background: url('../../img/933a88539897ac96d71b65c27122b3ec.jpg') center center no-repeat;
     background-size: 100% auto;
@@ -17,10 +17,10 @@
 .allF h1 {
     color: rgb(248, 244, 14);
     position: absolute;
-    right: 50px;
+    right: 150px;
     margin: 25px;
 
-    font-family: 'Balsamiq Sans', cursive;
+    font-family: 'Balsamiq Sans', cursive; 
     font-size: 50px;
 }
 
@@ -28,7 +28,7 @@
 .formulario form{
     position: absolute;
     top: 200px;
-    right: 10px;
+    right: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,7 +85,7 @@
     padding: 10px;
     width: 450px;
     background-color: rgba(0, 0, 0, 0.938);
-    border: black solid 2px;
+    border: rgba(0, 0, 0, 0.842) solid 4px;
     border-radius: 5px;
 
     font-family: 'Indie Flower', cursive;
@@ -93,4 +93,49 @@
     color: rgba(246, 250, 6, 0.938);
 
 
+}
+
+.formulario .bts:hover {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    background-color: rgba(246, 250, 6, 0.521);
+}
+
+.fullElement {
+    position: relative;
+    top: 400px;
+    left: 200px;
+
+}
+.element {
+    background-color: rgba(246, 250, 6, 0.377);
+    border: rgba(246, 250, 6, 0.938) solid 2px;
+
+    height: 40px;
+    width: 250px;
+    margin: 20px;
+
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: space-between    
+}
+
+.element h3 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: bold;
+}
+
+.element button{
+    height: 30px;
+    width: 30px;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 50px;
+    border:  solid 3px rgb(5, 5, 5);
+    text-align: center;
+    padding: auto;
+    color: rgb(2, 2, 2);
+    background-color: rgba(0, 0, 0, 0);
+    
 }
